--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div>
     <div class="lang-label">日本語 / Japanese</div>
     <h1>プライバシーポリシー</h1>
-    <p>本プライバシーポリシーは、個人開発アプリ「Multi Record Calendar」（以下、「本アプリ」）におけるユーザー情報の取り扱いについて定めるものです。</p>
+    <p>本プライバシーポリシーは、個人開発アプリ「マルチ記録カレンダー」（以下、「本アプリ」）におけるユーザー情報の取り扱いについて定めるものです。</p>
 
     <h2>1. 開発者情報およびお問い合わせ先</h2>
     <p>
@@ -110,7 +110,7 @@
       <a href="mailto:appyasui@gmail.com">appyasui@gmail.com</a>
     </p>
 
-    <p>最終更新日：2025年12月（必要に応じて更新してください）</p>
+    <p>最終更新日：2025年12月</p>
   </div>
 
   <hr>
@@ -202,7 +202,7 @@
       <a href="mailto:appyasui@gmail.com">appyasui@gmail.com</a>
     </p>
 
-    <p>Last updated: December 2025 (please update this date as needed)</p>
+    <p>Last updated: December 2025</p>
   </div>
 
 </body>
