--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <h2>1. 開発者情報およびお問い合わせ先</h2>
     <p>
-      開発者：個人開発者（Yasui）<br>
+      開発者：Yasui Apps（個人開発者）<br>
       お問い合わせ用メールアドレス：<a href="mailto:appyasui@gmail.com">appyasui@gmail.com</a>
     </p>
 
@@ -126,7 +126,7 @@
 
     <h2>1. Developer Information & Contact</h2>
     <p>
-      Developer: Individual developer (Yasui)<br>
+      Developer: Yasui (Individual developer)<br>
       Contact email: <a href="mailto:appyasui@gmail.com">appyasui@gmail.com</a>
     </p>
 
