--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
     <h2>1. Developer Information & Contact</h2>
     <p>
-      Developer: Yasui (Individual developer)<br>
+      Developer: Yasui Apps (Individual developer)<br>
       Contact email: <a href="mailto:appyasui@gmail.com">appyasui@gmail.com</a>
     </p>
 
