--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     </ul>
     <p>
       これらの情報は、広告の表示・最適化・不正行為防止などを目的として Google により利用されます。<br>
+      なお、ユーザーは端末の設定から広告 ID のリセットや、パーソナライズ広告の制限を行うことができます。<br>
       収集・利用される情報の詳細については、Google のプライバシーポリシーおよびパートナー向けポリシーをご確認ください。
     </p>
     <ul>
@@ -156,6 +157,7 @@
     </ul>
     <p>
       This information is used by Google for purposes such as ad display, personalization, analytics, and fraud prevention.<br>
+      Users can reset their Advertising ID or opt out of personalized ads through their device settings.<br>
       For more details about how Google collects and uses data, please refer to the following:
     </p>
     <ul>
